@@ -1,5 +1,6 @@
 Revision history for Sys-Syslog
 
+        [BUGFIX] CPAN-RT#69040: Don't modify @_ in syslog().
         [DOC] Perl-RT#81858: Fix some spelling errors (Peter J. Acklam).
 
 0.31 -- 2012.08.18 -- Sebastien Aperghis-Tramoni (SAPER)
